Added Bios and Youtube channel

--- a/about-us.html
+++ b/about-us.html
@@ -126,7 +126,7 @@
             <div class="caption text-center descriptions">
               <div ><strong class="card-text dark-purple">Lily</strong></div>
               <p class="text-muted card-text1">
-                Hi! My name is Lily and I am in the twelfth grade at LASA school. My extracurricular activities include Science Olympiad and LASA's Women in Computer Science Club. Next year in college I plan to study computer science. However, I have not decided where I am going to attend college. With my free time, I like to bake (and eat what I bake), ice skate, and read. Also, with my free time before the pandemic, I participated in volunteer work with an organization called "Mobile Loaves and Fishes" where I made meals and brought them to communities that do not have enough food. One of my most important achievements is having leadership positions in the clubs in which I have participated because I could contribute to the organizations that I have enjoyed. I have learned a lot through the Spanish program at LASA and I am very excited to be a part of Noche de Las Estrellas this year. I hope everyone enjoys the show!
+                Hi! My name is Lily and I am in the twelfth grade at LASA high school. My extracurricular activities include Science Olympiad and LASA's Women in Computer Science Club. Next year in college I plan to study computer science. However, I have not decided where I am going to attend college. With my free time, I like to bake (and eat what I bake), ice skate, and read. Also, with my free time before the pandemic, I participated in volunteer work with an organization called "Mobile Loaves and Fishes" where I made meals and brought them to communities that do not have enough food. One of my most important achievements is having leadership positions in the clubs in which I have participated because I could contribute to the organizations that I have enjoyed. I have learned a lot through the Spanish program at LASA and I am very excited to be a part of Noche de Las Estrellas this year. I hope everyone enjoys the show!
               </p>
             </div>
           </div>
@@ -178,12 +178,12 @@ Hi! My name is Elena Gareau and I am a senior this year! Some of my extracurricu
           </div>
         </div>
         <div class="card">
-          <!--<img class = "card-img-top" src="assets/FotosDeRostro/"/>-->
+          <img class = "card-img-top" src="assets/FotosDeRostro/KindaAbouHamdan.PNG"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
               <div ><strong class="card-text dark-purple">Kinda</strong></div>
               <p class="text-muted card-text1">
-                Hello! My name is Kinda and I am in the twelfth grade at LASA. I am representing the press team for Noche de Las Estrellas. My extracurricular activities include being a member of the Hispanic Honorary Society and Diversity Council. Since 2019, I have volunteered with Posada Esperanza, teaching English to families. During the pandemic, this happened virtually. Some of my most important accomplishments have been landing leadership positions in my extracurricular organizations and the creation of Minorities in Math. I'm still not sure where I'm going to college next year. What I liked most about the Spanish program is that it has allowed me to learn about other cultures and also has given me the confidence to teach English with my volunteer work. I am very excited for the show and I hope everyone enjoys it!
+                Hello! My name is Kinda and I am a senior at LASA. I am representing the press team for Noche de Las Estrellas. My extracurricular activities include being a member of the Hispanic Honorary Society and Diversity Council. Since 2019, I have volunteered with Posada Esperanza, teaching English to families. During the pandemic, this happened virtually. Some of my most important accomplishments have been landing leadership positions in my extracurricular organizations and the creation of Minorities in Math. What I liked most about the Spanish program is that it has allowed me to learn about other cultures and also has given me the confidence to teach English with my volunteer work. I am very excited for the show and I hope everyone enjoys it!
 
               </p>
             </div>
@@ -212,6 +212,84 @@ Hi! My name is Elena Gareau and I am a senior this year! Some of my extracurricu
             </div>
           </div>
         </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/LuisUrrieta.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Luis</strong></div>
+              <p class="text-muted card-text1">
+                Hello! My name is Luis Urrieta and I am 17 years old. I love playing football, chess, and I like cooking and playing guitar. I have been playing the guitar since I was 9 years old  and  have played and sung in my church! Something interesting about my life is that I have had to move and live in various parts of the United States and the rest of the world. I hope to achieve my goal of being a lawyer as well as in the future being able to open a restaurant and from there continue to open more. Right now, I am not sure where I will go to college, but of course I will go somewhere. Something i loved the most about the spanish program at LASA is that I could speak spanish with other students.
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/SomayaJimenez-Haham.jpg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Somaya</strong></div>
+              <p class="text-muted card-text1">
+                Hi! My name is Somaya. In my free time, I enjoy swimming, spending time with family and friends, and traveling. I currently speak four languages and hope to learn a couple more. Though I have not decided where I plan on attending university, out of the schools I have been accepted to, I am currently leaning towards Haverford College, McGill University, and Barnard College. I have enjoyed the project-based aspect of Spanish at LASA.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/AlecLippman.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Alec</strong></div>
+              <p class="text-muted card-text1">
+                Hello, I'm Alec Lippman and I'm very excited to show our work in Noche! I am a member of the Diversity Council, a group that organizes many events to create a more open and diverse environment at LASA. I am also studying to be an EMT-Basic with the Fire Academy. In addition, I am an editor in the LASA newspaper called The Liberator. I don't know where I'm going to go for college but I hope to study in Boston. My favorite thing about the Spanish program at LASA is the community and all the friends that I have made during my four years at LASA. One of my biggest goals is to become a biomedical engineer. I love to read, explore nature, and spend time with my friends.
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/WrennyCollamer.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Wrenny</strong></div>
+              <p class="text-muted card-text1">
+                Hi! My name is Wrenny and I am a senior at LASA this year. I have been in the Spanish program at LASA for four years and I am grateful that over time, the program has helped me become much more comfortable in Spanish. I am an editor in the LASA newspaper and a member of the LASA Environmental Club—I enjoy journalism and nature. In my free time I like hiking, exploring the city with my friends, or playing tennis. Although it's not going to be a normal show, I can’t wait for you to see all our hard work, and I hope you enjoy it!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/Elizabeth.jpg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Elizabeth</strong></div>
+              <p class="text-muted card-text1">
+                Hello! My name is Elizabeth Cabrera! I am in 10th grade, and this is my second year taking Spanish at LASA . The Spanish program has helped me expand my knowledge of Latino culture as well as my vocabulary. Apart from taking Spanish classes I am also a cheerleader for LASA and I am part of a school club called Operation Smile. After High School I hope to go to a university and study communication or business. My parents emigrated from mexico when I was very young and since I can remember we would always  go to Mexico every year to live with my family and interact with my culture.
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/LisbetyAlfonso.PNG"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Lisbety</strong></div>
+              <p class="text-muted card-text1">
+                Hi guys! My name is Lisbety Alfonso and I am very excited to see the final show and I hope you are too. It's just my second year at LASA, I'm not involved in many things, but I'm in theater and next year I hope to play baseball. I still don't know which university I will go to, but I know I want to study architecture. I was born in Cuba, came here when I was 10 and the Spanish program helped me a lot. With the program I can learn more about other cultures and not lose my spanish. Hope you enjoy the show!
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+
 
 
       </div>
