--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
         <div class = "col-sm-3">
           <h5>Instagram: <a href = "https://www.instagram.com/lasanoche/" class="social-media-links">@lasanoche</a></h5>
         </div>
-        <div class = "col-sm-4">
+        <div class = "col-sm-3">
           <h5>Facebook: <a href="https://www.facebook.com/noche.delasestrellas.7"class="social-media-links">Noche de las Estrellas</a></h5>
+        </div>
+        <div class = "col-sm-3">
+          <h5>Youtube: <a href="https://www.youtube.com/channel/UCBWtRdG32AdxSnsQ9FgjfIQ"class="social-media-links">LASA Noche de las Estrellas</a></h5>
         </div>
         <div class = "col-sm-3">
           <h5>TikTok: <a href="https://www.tiktok.com/@lasanoche?lang=en" class="social-media-links">@lasanoche</a></h5>
