--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="card">
-          <!--<img class = "card-img-top" src="assets/FotosDeRostro/"/>-->
+          <img class = "card-img-top" src="assets/FotosDeRostro/KindaAbouHamdan.PNG"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
               <div ><strong class="card-text dark-purple">Kinda</strong></div>
@@ -206,6 +206,77 @@
           </div>
         </div>
 
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/LuisUrrieta.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Luis</strong></div>
+              <p class="text-muted card-text1">
+              Hola! Mi nombre es Luis Urrieta y tengo 17 años. Me encanta jugar futbol, ajedrez, al igual que me gusta cocinar y tocar la guitarra. Es a través de la guitarra que desde que tenía 9 años he tocado y cantado en mi iglesia! Algo interesante de mi vida es que durante varias etapas de mi vida he tenido que mudarme y vivir en varias partes de los Estados Unidos y el resto del mundo. Yo espero lograr mi meta de ser un abogado al igual que en el futuro poder abrir un restaurante y de ahí continuar a abrir más. Al momento nose a donde atenderé la universidad pero por supuesto que atenderé en algún lugar. Lo que me ha gustado del programa de español es que a través del programa he podido hablar mi español con otros estudiantes.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/SomayaJimenez-Haham.jpg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Somaya</strong></div>
+              <p class="text-muted card-text1">
+                  ¡Hola! Me llamo Somaya. En mi tiempo libre, me gusta nadar, viajar, y pasar tiempo con mis amigos. Hablo cuatro lenguajes y espero aprender unos cuantos más. Aunque no he decidido donde ir para la Uni, de mis universidades admitidas, me gusta más Haverford, McGill, y Barnard. También me gustó mucho los proyectos hechos en las clases de Español.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/AlecLippman.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Alec</strong></div>
+              <p class="text-muted card-text1">
+                  ¡Hola, soy Alec Lippman y estoy muy emocionado por mostrar nuestro trabajo en la producción de Noche de Las Estrellas! Soy miembro de Diversity Council, un grupo que organiza muchos eventos para crear un ambiente más abierto y diverso en LASA. También estoy estudiando para ser un EMT-Básico con la Académica del Fuego (LBJ Fire Academy). En adición, soy un editor en el periodico de LASA que se llama The Liberator. No sé donde voy a ir para la universidad pero espero que yo estudie en Boston. Mi cosa preferida del programa de Español en LASA es la comunidad y los amigos hechos durante mis cuatro años en LASA. El logro principal en mi vida que quiero alcanzar es ser un ingeniero biomédico. Me encanta leer, explorar la naturaleza, y relajarme con mis amigos.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/WrennyCollamer.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Wrenny</strong></div>
+              <p class="text-muted card-text1">
+                ¡Buenas! Me llamo Wrenny y soy un senior en LASA este año. Llevo cuatro años en el programa de español en LASA y estoy agradecido que a través del tiempo el programa me ha ayudado a llegar a ser mucho más cómodo en el español. Soy editor en el periódico de LASA y miembro del Environmental Club de LASA—disfruto el periodismo y la naturaleza. En mi tiempo libre me pueden encontrar haciendo senderismo, explorando la ciudad con mis amigos, o jugando el tenis. Aunque no va a ser un show normal, tengo ganas de que vean lo que hemos producido este año para Noche de las Estrellas y espero que les guste nuestro trabajo.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/Elizabeth.jpg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Elizabeth</strong></div>
+              <p class="text-muted card-text1">
+                  ¡Hola! ¡Yo me llamo Elizabeth Cabrera! Estoy en el grado 10 y este es mi segundo año tomando español en LASA . El programa de español me ha ayudado a expandir mi conocimiento de la cultura latina también como mi vocabulario. Aparte de tomar clases de español yo también soy una porrista para LASA y soy parte de un club de la escuela llamada Operation Smile. Después de High School espero ir a una Universidad y estudiar comunicación o negocio. Mis padres emigraron de méxico cuando estaba muy jóvenes y desde que yo pueda recordar yo a ido a México cada año para convivir con mi familia y interactuar con mi cultura.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/LisbetyAlfonso.PNG"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Lisbety</strong></div>
+              <p class="text-muted card-text1">
+                  ¡ Hola muchachos! Me llamo Lisbety Alfonso y estoy muy emocionada para ver el show final en la Noche de las Estrellas y espero que ustedes también. Es solo mi segundo ano en LASA, no estoy involucrada en muchas cosas, pero estoy en teatro y el próximo año espero jugar baseball. Todavía no sé a qué universidad iré, pero si sé que quiero estudiar algo de architectura. Yo nací en Cuba, vine para aca cuando tenia 10 años, el programa de espanol me a ayudado mucho. Con el programa yo puedo aprender más sobre otras culturas y no olvidar mi español. Nos veremos la Noche de las Estrellas,espero que disfruten.
+              </p>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
