Added link to YouTube Premiere

--- a/ver-el-show.html
+++ b/ver-el-show.html
@@ -51,15 +51,19 @@
         <h1 class="header-title">
           Ver el Show!
         </h1>
+
         <p class = "big-text">
-          ¡el enlace de Youtube Premiere estará aquí el 30 de abril! ¡Vuelve para ver el show!
+          <strong>¡The Youtube Premiere está <a class = "yellow-links" href = "https://youtu.be/-_eanW0UWNM">aquí</a> (<a class = "white-links" href = "https://youtu.be/-_eanW0UWNM">youtu.be/-_eanW0UWNM</a>)!</strong>
+        </p>
+        <p>
+          Empieza a las 7 de la tarde, el 30 de abril
         </p>
       </div>
     </div>
 
 
     <div class= "container">
-      <h2 class="dark-purple">Mientras esperan, ¡disfruten estes videos del año pasado!</h2>
+      <h2 class="dark-purple"> ¡También disfruten estes videos del año pasado!</h2>
       <div class="row">
         <div class="col-lg-6">
 
