--- a/watch.html
+++ b/watch.html
@@ -54,13 +54,17 @@
           Watch the Show!
         </h1>
         <p class = "big-text">
-          The Youtube Premiere will be linked here on April 30th! Come back then to see the show!
+          <strong>The Youtube Premiere can be found <a class = "yellow-links" href = "https://youtu.be/-_eanW0UWNM">here</a> (<a class = "white-links" href = "https://youtu.be/-_eanW0UWNM">youtu.be/-_eanW0UWNM</a>)!</strong><br/>
         </p>
+        <p>It will start at 7pm on April 30th</p>
       </div>
     </div>
 
+    <!--<div class="container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-_eanW0UWNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>-->
     <div class= "container">
-      <h2 class="dark-purple">In the meantime, check out these videos from last year!</h2>
+      <h2 class="dark-purple">Also, check out these videos from last year!</h2>
       <div class="row">
         <div class="col-lg-6">
 
