Fixed Spanish Translation

--- a/ver-el-show.html
+++ b/ver-el-show.html
@@ -53,10 +53,10 @@
         </h1>
 
         <p class = "big-text">
-          <strong>¡The Youtube Premiere está <a class = "yellow-links" href = "https://youtu.be/-_eanW0UWNM">aquí</a> (<a class = "white-links" href = "https://youtu.be/-_eanW0UWNM">youtu.be/-_eanW0UWNM</a>)!</strong>
+          <strong>¡El show está <a class = "yellow-links" href = "https://youtu.be/-_eanW0UWNM">aquí</a> (<a class = "white-links" href = "https://youtu.be/-_eanW0UWNM">youtu.be/-_eanW0UWNM</a>)!</strong>
         </p>
         <p>
-          Empieza a las 7 de la tarde, el 30 de abril
+          Empezará a las 7 de la tarde, el 30 de abril
         </p>
       </div>
     </div>
