Added watch button

--- a/index-español.html
+++ b/index-español.html
@@ -61,6 +61,12 @@
             <p>
               Noche de las Estrellas es un espectáculo presentado por la clase de español 6 de LASA cada año. Este año, el show va a ser el 30 de abril, y totalmente virtual, pero sin embargo espectacular, completa con todo, desde los bailes tradicionales de bachata, a la música de latin pop, y ¡lleno de un montón de bailes y sonrisas!
             </p>
+
+            <a href = "https://youtu.be/-_eanW0UWNM">
+              <div class="watch-button">
+                <span id = "watch-button">Ver el Show<span>
+              </div>
+            </a>
           </div>
         </div>
 
