--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
               but nevertheless spectacular, complete with everything from traditional Bachata dancing
               to Latin Pop Music and filled with plenty of dancing and laughter!
             </p>
+            <a href = "https://youtu.be/-_eanW0UWNM">
+              <div class="watch-button">
+                <span id = "watch-button">Watch Now<span>
+              </div>
+            </a>
+
           </div>
         </div>
 
